--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-jsonschema-form": "^0.12.0",
     "react-router": "^2.0.0"
   },
   "devDependencies": {
