--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-jsonschema-form": "^0.12.0",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "zooid-ui": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
