--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^0.14.7",
     "react-jsonschema-form": "^0.12.0",
     "react-router": "^2.0.0",
+    "superagent": "^1.8.0-beta.2",
     "zooid-ui": "^2.0.0"
   },
   "devDependencies": {
