--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/octoblu/flow-json-schema-editor#readme",
   "dependencies": {
+    "brace": "^0.7.0",
     "react": "^0.14.7",
+    "react-ace": "^3.1.0",
     "react-dom": "^0.14.7",
     "react-jsonschema-form": "^0.12.0",
     "react-router": "^2.0.0",
