--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/octoblu/flow-json-schema-editor#readme",
   "dependencies": {
     "brace": "^0.7.0",
+    "lodash": "^4.6.1",
     "react": "^0.14.7",
     "react-ace": "^3.1.0",
     "react-dom": "^0.14.7",
