--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ before_deploy:
 - ./node_modules/webpack/bin/webpack.js --config webpack.config.prod.js
 - mkdir -p deploy/latest
 - mkdir -p deploy/$TRAVIS_TAG
-- cp dist/. deploy/latest
+- cp dist/bundle.js deploy/latest
+- cp dist/bundle.js.map deploy/latest
 - cp index.html deploy/latest
-- cp dist/. deploy/$TRAVIS_TAG
+- cp dist/bundle.js deploy/$TRAVIS_TAG
+- cp dist/bundle.js.map deploy/$TRAVIS_TAG
 - cp index.html deploy/$TRAVIS_TAG
 deploy:
   provider: s3
