--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
 - '0.11'
 - '0.10'
 before_deploy:
-- ./node_modules/webpack/bin/webpack.js webpack --config webpack.config.prod.js
+- webpack --config webpack.config.prod.js
 - mkdir -p deploy/latest
 - mkdir -p deploy/$TRAVIS_TAG
 - cp dist/bundle.js deploy/latest
