--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "flow-json-schema-editor",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "edit flow-json schemas",
   "main": "index.js",
   "scripts": {
     "start": "node dev-server.js",
+    "build": "webpack --config webpack.config.prod.js",
     "test": "echo \"No test specified, but you good bruh\""
   },
   "repository": {
