--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
 - '0.11'
 - '0.10'
 before_deploy:
-- webpack --config webpack.config.prod.js
+- npm run build
 - mkdir -p deploy/dist
 - mkdir -p deploy/$TRAVIS_TAG
 - cp index.html deploy
